Update CatalogServiceTest.java