@@ -6,112 +6,103 @@ import com.example.day3.mapper.CatalogMapper;
 import com.example.day3.repository.CatalogRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.boot.test.context.SpringBootTest;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-public class CatalogServiceTest {
+@SpringBootTest
+class CatalogServiceTest {
 
+    @Mock
     private CatalogRepository catalogRepository;
-    private CatalogService catalogService;
 
-    private Catalog catalog;
-    private CatalogDto catalogDto;
+    private CatalogService catalogService;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        catalogRepository = mock(CatalogRepository.class);
         catalogService = new CatalogService(catalogRepository);
-        catalog = TestData.createCatalog(1, "Electronics", "Various electronic products", true, null);
-        catalogDto = CatalogMapper.INSTANCE.toDto(catalog);
     }
 
     @Test
-    void testGetAllCatalogs() {
-        when(catalogRepository.findAll()).thenReturn(List.of(catalog));
+    void getAllCatalogsTest() {
+        Catalog catalog = new Catalog();
+        catalog.setId(1);
+        catalog.setName("Catalog1");
+
+        when(catalogRepository.findAll()).thenReturn(Collections.singletonList(catalog));
 
         List<CatalogDto> catalogDtos = catalogService.getAllCatalogs();
-
-        assertNotNull(catalogDtos);
         assertEquals(1, catalogDtos.size());
-        verify(catalogRepository, times(1)).findAll();
+        assertEquals("Catalog1", catalogDtos.get(0).getName());
     }
 
     @Test
-    void testGetCatalogById_Success() {
+    void getCatalogByIdTest() {
+        Catalog catalog = new Catalog();
+        catalog.setId(1);
+        catalog.setName("Catalog1");
+
         when(catalogRepository.findById(1)).thenReturn(Optional.of(catalog));
 
-        CatalogDto foundCatalog = catalogService.getCatalogById(1);
-
-        assertNotNull(foundCatalog);
-        assertEquals(catalogDto.getId(), foundCatalog.getId());
-        verify(catalogRepository, times(1)).findById(1);
+        CatalogDto catalogDto = catalogService.getCatalogById(1);
+        assertNotNull(catalogDto);
+        assertEquals("Catalog1", catalogDto.getName());
     }
 
     @Test
-    void testGetCatalogById_NotFound() {
-        when(catalogRepository.findById(1)).thenReturn(Optional.empty());
+    void createCatalogTest() {
+        Catalog catalog = new Catalog();
+        catalog.setId(1);
+        catalog.setName("Catalog1");
 
-        CatalogDto foundCatalog = catalogService.getCatalogById(1);
-
-        assertNull(foundCatalog);
-        verify(catalogRepository, times(1)).findById(1);
-    }
-
-    @Test
-    void testCreateCatalog() {
         when(catalogRepository.save(any(Catalog.class))).thenReturn(catalog);
 
-        CatalogDto savedCatalog = catalogService.createCatalog(catalogDto);
+        CatalogDto catalogDto = new CatalogDto();
+        catalogDto.setName("Catalog1");
 
-        assertNotNull(savedCatalog);
-        assertEquals(catalogDto.getId(), savedCatalog.getId());
-        verify(catalogRepository, times(1)).save(any(Catalog.class));
+        CatalogDto createdCatalogDto = catalogService.createCatalog(catalogDto);
+        assertNotNull(createdCatalogDto);
+        assertEquals("Catalog1", createdCatalogDto.getName());
     }
 
     @Test
-    void testUpdateCatalog_Success() {
+    void updateCatalogTest() {
+        Catalog catalog = new Catalog();
+        catalog.setId(1);
+        catalog.setName("Catalog1");
+
         when(catalogRepository.findById(1)).thenReturn(Optional.of(catalog));
         when(catalogRepository.save(any(Catalog.class))).thenReturn(catalog);
 
-        CatalogDto updatedCatalog = catalogService.updateCatalog(1, catalogDto);
+        CatalogDto catalogDto = new CatalogDto();
+        catalogDto.setName("Updated Catalog1");
 
-        assertNotNull(updatedCatalog);
-        assertEquals(catalogDto.getId(), updatedCatalog.getId());
-        verify(catalogRepository, times(1)).findById(1);
-        verify(catalogRepository, times(1)).save(any(Catalog.class));
+        CatalogDto updatedCatalogDto = catalogService.updateCatalog(1, catalogDto);
+        assertNotNull(updatedCatalogDto);
+        assertEquals("Updated Catalog1", updatedCatalogDto.getName());
     }
 
     @Test
-    void testUpdateCatalog_NotFound() {
-        when(catalogRepository.findById(1)).thenReturn(Optional.empty());
-
-        assertThrows(NoSuchElementException.class, () -> catalogService.updateCatalog(1, catalogDto));
-        verify(catalogRepository, times(1)).findById(1);
-    }
-
-    @Test
-    void testDeleteCatalog() {
+    void deleteCatalogTest() {
         doNothing().when(catalogRepository).deleteById(1);
 
         catalogService.deleteCatalog(1);
-
         verify(catalogRepository, times(1)).deleteById(1);
     }
 
     @Test
-    void testDeleteAllCatalogs() {
+    void deleteAllCatalogsTest() {
         doNothing().when(catalogRepository).deleteAll();
 
         catalogService.deleteAllCatalogs();
-
         verify(catalogRepository, times(1)).deleteAll();
     }
 }
